--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -59,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080/api"
+  "proxy": "https://socialnetworkapp6420.herokuapp.com"
 }
