--- a/client-admin/.env
+++ b/client-admin/.env
@@ -1,4 +1,4 @@
 REACT_APP_PUBLIC_FOLDER =http://localhost:5000/images/
-REACT_APP_API_URL=https://socialnetworkapp6420.herokuapp.com
+REACT_APP_API_URL=https://socialnetworkapp6420.herokuapp.com/api
 PORT=3005
 ; REACT_APP_API_URL=https://thangmd-socical-media.herokuapp.com/
