--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -13,12 +13,15 @@
     "@mui/material": "^5.9.3",
     "@mui/styled-engine-sc": "^5.9.3",
     "@mui/utils": "^5.9.3",
+    "@mui/x-data-grid": "^5.17.14",
+    "@mui/x-data-grid-generator": "^5.17.14",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "emoji-mart": "^3.0.1",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
@@ -29,11 +32,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.1.16",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
